feat(p2p): always run DiscV4 + DiscV5 on a shared UDP socket
Besu's discovery layer is collapsed to a single always-on mode that
runs DiscV4 and DiscV5 concurrently on one Netty UDP channel per IP
family. The previous `--Xv5-discovery-enabled` toggle (and the
intermediate `--discovery-protocol=<V4|V5|BOTH>` selector) is removed
entirely.

Motivation:
- Mainnet/testnets are migrating to DiscV5 at Glamsterdam; DiscV4
  remains in service for legacy enterprise/private networks. Running
  both simultaneously lets a node bridge the transition without an
  operator-chosen mode.
- One UDP socket per family — protocol-level demux on the receive path
  routes inbound traffic to the right stack (V5: masked-prefix check;
  V4: hash+signature fallback). One CLI surface, one runtime path,
  fewer bootnode pitfalls.

CLI / configuration:
- `--discovery-protocol` flag removed. The `DiscoveryProtocol` enum,
  `DiscoveryConfiguration.{set,get}DiscoveryProtocol`, the
  `discoveryV5Enabled()` helper, and the `RunnerBuilder.discoveryProtocol`
  setter are deleted.
- `--bootnodes` now accepts a mixed list of enode URLs and ENR strings.
  Per-entry prefix routing dispatches `enr:` entries to the V5 list and
  everything else to the V4 list. Both lists are always written to the
  builder, so an explicit `--bootnodes` is a full override of any
  defaults.

Genesis:
- The separate `v5bootnodes` JSON key is dropped, along with
  `DiscoveryOptions.getV5BootNodes()` and `V5_BOOTNODES_KEY`. The live
  `v5Bootnodes` entries in mainnet.json and hoodi.json are merged into
  the unified `bootnodes` array; the prefix router dispatches at parse
  time.

Agent factory:
- `BothPeerDiscoveryAgentFactory` is renamed
  `CompositePeerDiscoveryAgentFactory` and is now the only path used by
  `DefaultPeerDiscoveryAgentFactory`. It instantiates V4 and V5 sub-
  agents against a shared `SharedDiscoveryTransport`.
- Graceful degrade for non-secp256k1 keys: DiscV5 requires secp256k1.
  When the configured node k